# MAI_labs_DB

./: docker-compose.yaml
lab1/: DDL.sql  README.md  lab1.md
lab2/: DDL.sql  drop_all.sql  insert.py  pyproject.toml
lab2/DML/: delete_cascade.sql  delete_outgoing.sql  delete_supplyer.sql  price_change.sql  product_category.sql  stock.sql
lab2/agregation/: leftover_price.sql  suppliers.sql  warehouse.sql
lab2/joins/: incoming.sql  products.sql  warehouses.sql
lab2/view/: leftover.sql  turnover.sql  warehouses.sql
lab3/: functions.sql  procedures.sql  triggers.sql
lab3/DML/: delete.sql  insert.sql  trigger_audit.sql  trigger_check.sql  update.sql
lab4/: create_indexes.sql  index_metrics.sql
lab4/non-repetable-read/: a.sql  b.sql
lab4/phantom-read/: a.sql  b.sql
