[project]
name = "lab2"
version = "0.1.0"
description = ""
authors = [
    {name = "Lidne",email = "george.ermekov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "faker (>=38.2.0,<39.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
